@@ -379,8 +379,7 @@ public class Mesh implements PrimitiveList {
         Point3 v1p = getPoint(index1);
         Point3 v2p = getPoint(index2);
         Vector3 ng = Point3.normal(v0p, v1p, v2p);
-        if (parent != null)
-            ng = parent.transformNormalObjectToWorld(ng);
+        ng = parent.transformNormalObjectToWorld(ng);
         ng.normalize();
         state.getGeoNormal().set(ng);
         switch (normals.interp) {
@@ -397,8 +396,7 @@ public class Mesh implements PrimitiveList {
                 state.getNormal().x = w * normals[i30 + 0] + u * normals[i31 + 0] + v * normals[i32 + 0];
                 state.getNormal().y = w * normals[i30 + 1] + u * normals[i31 + 1] + v * normals[i32 + 1];
                 state.getNormal().z = w * normals[i30 + 2] + u * normals[i31 + 2] + v * normals[i32 + 2];
-                if (parent != null)
-                    state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
+                state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
                 state.getNormal().normalize();
                 break;
             }
@@ -408,8 +406,7 @@ public class Mesh implements PrimitiveList {
                 state.getNormal().x = w * normals[idx + 0] + u * normals[idx + 3] + v * normals[idx + 6];
                 state.getNormal().y = w * normals[idx + 1] + u * normals[idx + 4] + v * normals[idx + 7];
                 state.getNormal().z = w * normals[idx + 2] + u * normals[idx + 5] + v * normals[idx + 8];
-                if (parent != null)
-                    state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
+                state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
                 state.getNormal().normalize();
                 break;
             }
@@ -470,8 +467,7 @@ public class Mesh implements PrimitiveList {
                 dpdv.x = (-du2 * dp1.x + du1 * dp2.x) * invdet;
                 dpdv.y = (-du2 * dp1.y + du1 * dp2.y) * invdet;
                 dpdv.z = (-du2 * dp1.z + du1 * dp2.z) * invdet;
-                if (parent != null)
-                    dpdv = parent.transformVectorObjectToWorld(dpdv);
+                dpdv = parent.transformVectorObjectToWorld(dpdv);
                 // create basis in world space
                 state.setBasis(OrthoNormalBasis.makeFromWV(state.getNormal(), dpdv));
             }
