@@ -131,50 +131,109 @@ public class QuadMesh implements PrimitiveList {
         return bounds;
     }
 
-    private final void intersectTriangleKensler(Ray r, int primID, int a, int b, int c, IntersectionState state) {
-        float edge0x = points[b + 0] - points[a + 0];
-        float edge0y = points[b + 1] - points[a + 1];
-        float edge0z = points[b + 2] - points[a + 2];
-        float edge1x = points[a + 0] - points[c + 0];
-        float edge1y = points[a + 1] - points[c + 1];
-        float edge1z = points[a + 2] - points[c + 2];
-        float nx = edge0y * edge1z - edge0z * edge1y;
-        float ny = edge0z * edge1x - edge0x * edge1z;
-        float nz = edge0x * edge1y - edge0y * edge1x;
-        float v = r.dot(nx, ny, nz);
-        float iv = 1 / v;
-        float edge2x = points[a + 0] - r.ox;
-        float edge2y = points[a + 1] - r.oy;
-        float edge2z = points[a + 2] - r.oz;
-        float va = nx * edge2x + ny * edge2y + nz * edge2z;
-        float t = iv * va;
-        if (!r.isInside(t))
-            return;
-        float ix = edge2y * r.dz - edge2z * r.dy;
-        float iy = edge2z * r.dx - edge2x * r.dz;
-        float iz = edge2x * r.dy - edge2y * r.dx;
-        float v1 = ix * edge1x + iy * edge1y + iz * edge1z;
-        float beta = iv * v1;
-        if (beta < 0)
-            return;
-        float v2 = ix * edge0x + iy * edge0y + iz * edge0z;
-        if ((v1 + v2) * v > v * v)
-            return;
-        float gamma = iv * v2;
-        if (gamma < 0)
-            return;
-        r.setMax(t);
-        state.setIntersection(primID, beta, gamma);
-    }
-
     public void intersectPrimitive(Ray r, int primID, IntersectionState state) {
+        // ray/bilinear patch intersection adapted from "Production Rendering:
+        // Design and Implementation" by Ian Stephenson (Ed.)
         int quad = 4 * primID;
-        int a = 3 * quads[quad + 0];
-        int b = 3 * quads[quad + 1];
-        int c = 3 * quads[quad + 2];
-        int d = 3 * quads[quad + 3];
-        intersectTriangleKensler(r, 2 * primID + 0, a, b, c, state);
-        intersectTriangleKensler(r, 2 * primID + 1, a, c, d, state);
+        int p0 = 3 * quads[quad + 0];
+        int p1 = 3 * quads[quad + 1];
+        int p2 = 3 * quads[quad + 2];
+        int p3 = 3 * quads[quad + 3];
+        // transform patch into Hilbert space
+        final float A[] = {
+                points[p2 + 0] - points[p3 + 0] - points[p1 + 0] + points[p0 + 0],
+                points[p2 + 1] - points[p3 + 1] - points[p1 + 1] + points[p0 + 1],
+                points[p2 + 2] - points[p3 + 2] - points[p1 + 2] + points[p0 + 2] };
+        final float B[] = { points[p1 + 0] - points[p0 + 0],
+                points[p1 + 1] - points[p0 + 1],
+                points[p1 + 2] - points[p0 + 2] };
+        final float C[] = { points[p3 + 0] - points[p0 + 0],
+                points[p3 + 1] - points[p0 + 1],
+                points[p3 + 2] - points[p0 + 2] };
+        final float R[] = { r.ox - points[p0 + 0], r.oy - points[p0 + 1],
+                r.oz - points[p0 + 2] };
+        final float Q[] = { r.dx, r.dy, r.dz };
+
+        // pick major direction
+        float absqx = Math.abs(r.dx);
+        float absqy = Math.abs(r.dy);
+        float absqz = Math.abs(r.dz);
+
+        int X = 0, Y = 1, Z = 2;
+        if (absqx > absqy && absqx > absqz) {
+            // X = 0, Y = 1, Z = 2
+        } else if (absqy > absqz) {
+            // X = 1, Y = 0, Z = 2
+            X = 1;
+            Y = 0;
+        } else {
+            // X = 2, Y = 1, Z = 0
+            X = 2;
+            Z = 0;
+        }
+
+        float Cxz = C[X] * Q[Z] - C[Z] * Q[X];
+        float Cyx = C[Y] * Q[X] - C[X] * Q[Y];
+        float Czy = C[Z] * Q[Y] - C[Y] * Q[Z];
+        float Rxz = R[X] * Q[Z] - R[Z] * Q[X];
+        float Ryx = R[Y] * Q[X] - R[X] * Q[Y];
+        float Rzy = R[Z] * Q[Y] - R[Y] * Q[Z];
+        float Bxy = B[X] * Q[Y] - B[Y] * Q[X];
+        float Byz = B[Y] * Q[Z] - B[Z] * Q[Y];
+        float Bzx = B[Z] * Q[X] - B[X] * Q[Z];
+        float a = A[X] * Byz + A[Y] * Bzx + A[Z] * Bxy;
+        if (a == 0) {
+            // setup for linear equation
+            float b = B[X] * Czy + B[Y] * Cxz + B[Z] * Cyx;
+            float c = C[X] * Rzy + C[Y] * Rxz + C[Z] * Ryx;
+            float u = -c / b;
+            if (u >= 0 && u <= 1) {
+                float v = (u * Bxy + Ryx) / Cyx;
+                if (v >= 0 && v <= 1) {
+                    float t = (B[X] * u + C[X] * v - R[X]) / Q[X];
+                    if (r.isInside(t)) {
+                        r.setMax(t);
+                        state.setIntersection(primID, u, v);
+                    }
+                }
+            }
+        } else {
+            // setup for quadratic equation
+            float b = A[X] * Rzy + A[Y] * Rxz + A[Z] * Ryx + B[X] * Czy + B[Y] * Cxz + B[Z] * Cyx;
+            float c = C[X] * Rzy + C[Y] * Rxz + C[Z] * Ryx;
+            float discrim = b * b - 4 * a * c;
+            // reject trivial cases
+            if (c * (a + b + c) > 0 && (discrim < 0 || a * c < 0 || b / a > 0 || b / a < -2))
+                return;
+            // solve quadratic
+            float q = b > 0 ? -0.5f * (b + (float) Math.sqrt(discrim)) : -0.5f * (b - (float) Math.sqrt(discrim));
+            // check first solution
+            float Axy = A[X] * Q[Y] - A[Y] * Q[X];
+            float u = q / a;
+            if (u >= 0 && u <= 1) {
+                float d = u * Axy - Cyx;
+                float v = -(u * Bxy + Ryx) / d;
+                if (v >= 0 && v <= 1) {
+                    float t = (A[X] * u * v + B[X] * u + C[X] * v - R[X]) / Q[X];
+                    if (r.isInside(t)) {
+                        r.setMax(t);
+                        state.setIntersection(primID, u, v);
+                    }
+                }
+            }
+            u = c / q;
+            if (u >= 0 && u <= 1) {
+                float d = u * Axy - Cyx;
+                float v = -(u * Bxy + Ryx) / d;
+                if (v >= 0 && v <= 1) {
+                    float t = (A[X] * u * v + B[X] * u + C[X] * v - R[X]) / Q[X];
+                    if (r.isInside(t)) {
+                        r.setMax(t);
+                        state.setIntersection(primID, u, v);
+                    }
+                }
+            }
+        }
     }
 
     public int getNumPrimitives() {
@@ -184,24 +243,41 @@ public class QuadMesh implements PrimitiveList {
     public void prepareShadingState(ShadingState state) {
         state.init();
         Instance parent = state.getInstance();
-        int primID = state.getPrimitiveID() / 2;
-        boolean even = (state.getPrimitiveID() & 1) == 0;
+        int primID = state.getPrimitiveID();
         float u = state.getU();
         float v = state.getV();
-        float w = 1 - u - v;
         state.getRay().getPoint(state.getPoint());
         int quad = 4 * primID;
         int index0 = quads[quad + 0];
-        int index1 = quads[quad + (even ? 1 : 2)];
-        int index2 = quads[quad + (even ? 2 : 3)];
+        int index1 = quads[quad + 1];
+        int index2 = quads[quad + 2];
+        int index3 = quads[quad + 3];
         Point3 v0p = getPoint(index0);
         Point3 v1p = getPoint(index1);
         Point3 v2p = getPoint(index2);
-        Vector3 ng = Point3.normal(v0p, v1p, v2p);
-        if (parent != null)
-            ng = parent.transformNormalObjectToWorld(ng);
+        Point3 v3p = getPoint(index2);
+        float tanux = (1 - v) * (v1p.x - v0p.x) + v * (v2p.x - v3p.x);
+        float tanuy = (1 - v) * (v1p.y - v0p.y) + v * (v2p.y - v3p.y);
+        float tanuz = (1 - v) * (v1p.z - v0p.z) + v * (v2p.z - v3p.z);
+
+        float tanvx = (1 - u) * (v3p.x - v0p.x) + u * (v2p.x - v1p.x);
+        float tanvy = (1 - u) * (v3p.y - v0p.y) + u * (v2p.y - v1p.y);
+        float tanvz = (1 - u) * (v3p.z - v0p.z) + u * (v2p.z - v1p.z);
+
+        float nx = tanuy * tanvz - tanuz * tanvy;
+        float ny = tanuz * tanvx - tanux * tanvz;
+        float nz = tanux * tanvy - tanuy * tanvx;
+
+        Vector3 ng = new Vector3(nx, ny, nz);
+        ng = parent.transformNormalObjectToWorld(ng);
         ng.normalize();
         state.getGeoNormal().set(ng);
+
+        float k00 = (1 - u) * (1 - v);
+        float k10 = u * (1 - v);
+        float k01 = (1 - u) * v;
+        float k11 = u * v;
+
         switch (normals.interp) {
             case NONE:
             case FACE: {
@@ -212,28 +288,27 @@ public class QuadMesh implements PrimitiveList {
                 int i30 = 3 * index0;
                 int i31 = 3 * index1;
                 int i32 = 3 * index2;
+                int i33 = 3 * index3;
                 float[] normals = this.normals.data;
-                state.getNormal().x = w * normals[i30 + 0] + u * normals[i31 + 0] + v * normals[i32 + 0];
-                state.getNormal().y = w * normals[i30 + 1] + u * normals[i31 + 1] + v * normals[i32 + 1];
-                state.getNormal().z = w * normals[i30 + 2] + u * normals[i31 + 2] + v * normals[i32 + 2];
-                if (parent != null)
-                    state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
+                state.getNormal().x = k00 * normals[i30 + 0] + k10 * normals[i31 + 0] + k11 * normals[i32 + 0] + k01 * normals[i33 + 0];
+                state.getNormal().y = k00 * normals[i30 + 1] + k10 * normals[i31 + 1] + k11 * normals[i32 + 1] + k01 * normals[i33 + 1];
+                state.getNormal().z = k00 * normals[i30 + 2] + k10 * normals[i31 + 2] + k11 * normals[i32 + 2] + k01 * normals[i33 + 2];
+                state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
                 state.getNormal().normalize();
                 break;
             }
             case FACEVARYING: {
                 int idx = 3 * quad;
                 float[] normals = this.normals.data;
-                state.getNormal().x = w * normals[idx + 0] + u * normals[idx + (even ? 3 : 6)] + v * normals[idx + (even ? 6 : 9)];
-                state.getNormal().y = w * normals[idx + 1] + u * normals[idx + (even ? 4 : 7)] + v * normals[idx + (even ? 7 : 10)];
-                state.getNormal().z = w * normals[idx + 2] + u * normals[idx + (even ? 5 : 8)] + v * normals[idx + (even ? 8 : 11)];
-                if (parent != null)
-                    state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
+                state.getNormal().x = k00 * normals[idx + 0] + k10 * normals[idx + 3] + k11 * normals[idx + 6] + k01 * normals[idx + 9];
+                state.getNormal().y = k00 * normals[idx + 1] + k10 * normals[idx + 4] + k11 * normals[idx + 7] + k01 * normals[idx + 10];
+                state.getNormal().z = k00 * normals[idx + 2] + k10 * normals[idx + 5] + k11 * normals[idx + 8] + k01 * normals[idx + 11];
+                state.getNormal().set(parent.transformNormalObjectToWorld(state.getNormal()));
                 state.getNormal().normalize();
                 break;
             }
         }
-        float uv00 = 0, uv01 = 0, uv10 = 0, uv11 = 0, uv20 = 0, uv21 = 0;
+        float uv00 = 0, uv01 = 0, uv10 = 0, uv11 = 0, uv20 = 0, uv21 = 0, uv30 = 0, uv31 = 0;
         switch (uvs.interp) {
             case NONE:
             case FACE: {
@@ -245,6 +320,7 @@ public class QuadMesh implements PrimitiveList {
                 int i20 = 2 * index0;
                 int i21 = 2 * index1;
                 int i22 = 2 * index2;
+                int i23 = 2 * index3;
                 float[] uvs = this.uvs.data;
                 uv00 = uvs[i20 + 0];
                 uv01 = uvs[i20 + 1];
@@ -252,6 +328,8 @@ public class QuadMesh implements PrimitiveList {
                 uv11 = uvs[i21 + 1];
                 uv20 = uvs[i22 + 0];
                 uv21 = uvs[i22 + 1];
+                uv20 = uvs[i23 + 0];
+                uv21 = uvs[i23 + 1];
                 break;
             }
             case FACEVARYING: {
@@ -259,17 +337,19 @@ public class QuadMesh implements PrimitiveList {
                 float[] uvs = this.uvs.data;
                 uv00 = uvs[idx + 0];
                 uv01 = uvs[idx + 1];
-                uv10 = uvs[idx + (even ? 2 : 4)];
-                uv11 = uvs[idx + (even ? 3 : 5)];
-                uv20 = uvs[idx + (even ? 4 : 6)];
-                uv21 = uvs[idx + (even ? 5 : 7)];
+                uv10 = uvs[idx + 2];
+                uv11 = uvs[idx + 3];
+                uv20 = uvs[idx + 4];
+                uv21 = uvs[idx + 5];
+                uv30 = uvs[idx + 6];
+                uv31 = uvs[idx + 7];
                 break;
             }
         }
         if (uvs.interp != InterpolationType.NONE) {
             // get exact uv coords and compute tangent vectors
-            state.getUV().x = w * uv00 + u * uv10 + v * uv20;
-            state.getUV().y = w * uv01 + u * uv11 + v * uv21;
+            state.getUV().x = k00 * uv00 + k10 * uv10 + k11 * uv20 + k01 * uv30;
+            state.getUV().y = k00 * uv01 + k10 * uv11 + k11 * uv21 + k01 * uv31;
             float du1 = uv00 - uv20;
             float du2 = uv10 - uv20;
             float dv1 = uv01 - uv21;
@@ -289,8 +369,7 @@ public class QuadMesh implements PrimitiveList {
                 dpdv.x = (-du2 * dp1.x + du1 * dp2.x) * invdet;
                 dpdv.y = (-du2 * dp1.y + du1 * dp2.y) * invdet;
                 dpdv.z = (-du2 * dp1.z + du1 * dp2.z) * invdet;
-                if (parent != null)
-                    dpdv = parent.transformVectorObjectToWorld(dpdv);
+                dpdv = parent.transformVectorObjectToWorld(dpdv);
                 // create basis in world space
                 state.setBasis(OrthoNormalBasis.makeFromWV(state.getNormal(), dpdv));
             }
