@@ -1,4 +1,5 @@
 v0.07.0
+* Added QuadMesh primitive type (using bilinear patches)
 * Added real sphere lights
 * Console display now outputs to stderr to allow stdout to be used for output redirection
 * Added fisheye lens to .sc parser
